--- a/assets/css/trending.css
+++ b/assets/css/trending.css
@@ -18,10 +18,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   background: white;
-  z-index: 1000;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  z-index: 1000; 
 }
+
 
 .logo img{
  width: 50px;
