--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -7,20 +7,29 @@
 
 
 .top-banner {
-    background-color: #f5f5f5;
-    padding: 8px 0;
-    text-align: center;
-    font-size: 14px;
+  background-color: #f5f5f5;
+  padding: 8px 0;
+  text-align: center;
+  font-size: 14px;
+  position: fixed; 
+  width: 100%;
+  align-items: center;
+  z-index: 1000;
+  top: 0%;
+  left: 0;
+  
+
 }
 
 .main-header {
-  padding: 20px 5%;
+  padding: 20px 2%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: white;
+  z-index: 1000;
   position: fixed; 
-  top: 0; 
+  top: 25px; 
   left: 0; 
   width: 100%; 
   z-index: 1000; 
@@ -413,6 +422,7 @@ footer {
 
 
 .contact{
+  margin-top: 50px;
     background-image: linear-gradient(to right, rgba(27, 28, 29, 0.8), rgba(132, 156, 167, 0.8)),  url('/assets/images/banner\ \(1\).png');
     background-size: cover;
     background-position: center;
@@ -462,7 +472,7 @@ footer {
   }
   
   .send-message-btn {
-    background-color: #ffa500;
+    background-color: #ccad24;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -484,7 +494,7 @@ footer {
   }
   
   .social-icons a {
-    color: #ffa500;
+    color: #ccad24;
     margin-right: 10px;
     font-size: 24px;
   }
