--- a/assets/css/men.css
+++ b/assets/css/men.css
@@ -6,28 +6,34 @@
     font-family: "Raleway", sans-serif;
   }
 
+  .top-banner {
+    background-color: #f5f5f5;
+    padding: 8px 0;
+    text-align: center;
+    font-size: 14px;
+    position: fixed; 
+    width: 100%;
+    align-items: center;
+    z-index: 1000;
+    top: 0%;
+    left: 0;
+    
 
-.top-banner {
-  background-color: #f5f5f5;
-  padding: 8px 0;
-  text-align: center;
-  font-size: 14px;
 }
 
 .main-header {
-  padding: 20px 5%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  z-index: 1000;
-  position: fixed; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  z-index: 1000; 
+    padding: 20px 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    z-index: 1000;
+    position: fixed; 
+    top: 25px; 
+    left: 0; 
+    width: 100%; 
+    z-index: 1000; 
 }
-
 
 .logo img{
  width: 50px;
@@ -174,8 +180,9 @@ nav li:hover .dropdown {
 /* Hero Section */
 
 .hero {
+  margin-top:    50px;
   position: relative;
-  height: 600px;
+  height: 700px;
   overflow: hidden;
   animation: fadeIn 3.5s ease-out;
  
@@ -238,6 +245,7 @@ nav li:hover .dropdown {
   margin-bottom: 20px;
   opacity: 0;
   transform: translateY(20px);
+  color: #ccad24;
   transition: all 0.5s ease-out 0.3s;
 }
 
