--- a/assets/css/trending.css
+++ b/assets/css/trending.css
@@ -6,24 +6,33 @@
   }
 
 
-.top-banner {
-  background-color: #f5f5f5;
-  padding: 8px 0;
-  text-align: center;
-  font-size: 14px;
+  .top-banner {
+    background-color: #f5f5f5;
+    padding: 8px 0;
+    text-align: center;
+    font-size: 14px;
+    position: fixed; 
+    width: 100%;
+    align-items: center;
+    z-index: 1000;
+    top: 0%;
+    left: 0;
+    
+
 }
 
 .main-header {
-  padding: 20px 5%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: white;
-  position: fixed; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  z-index: 1000; 
+    padding: 20px 2%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: white;
+    z-index: 1000;
+    position: fixed; 
+    top: 25px; 
+    left: 0; 
+    width: 100%; 
+    z-index: 1000; 
 }
 
 
