--- a/assets/css/galerie.css
+++ b/assets/css/galerie.css
@@ -284,34 +284,33 @@ nav li:hover .dropdown {
 
 .gallery-body {
     font-family: Arial, sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
-    padding: 20px;
-    background-color: #f4f4f4;
-}
-
-.gallery {
+    max-width: 1200px;
+    margin: 0 auto;
     padding-top: 150px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
     padding-bottom: 50px;
 }
 
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+}
+
 .thumbnail {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
     cursor: pointer;
     transition: transform 0.3s ease;
-    border-radius: 10px;
 }
 
 .thumbnail:hover {
     transform: scale(1.05);
+}
+
+.thumbnail img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
 #modal {
@@ -322,25 +321,61 @@ nav li:hover .dropdown {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.8);
     justify-content: center;
     align-items: center;
 }
 
-#modalImage {
-    max-width: 90%;
-    max-height: 90%;
+.modal-content {
+   
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 80%;
+    max-height: 80%;
+    text-align: center;
+    position: relative;
+}
+
+.modal-image {
+    max-width: 100%;
+    max-height: 60vh;
     object-fit: contain;
 }
 
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.stars {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.star {
+    font-size: 30px;
+    color: #ddd;
     cursor: pointer;
+    transition: color 0.3s;
+}
+
+.star.active {
+    color: gold;
+}
+
+.btn {
+    background-color: #f0f0f0;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: #e0e0e0;
 }
 
 
