--- a/assets/css/galerie.css
+++ b/assets/css/galerie.css
@@ -293,7 +293,7 @@ nav li:hover .dropdown {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+   grid-template-columns: repeat(5,1fr);
     gap: 20px;
 }
 
@@ -465,5 +465,24 @@ footer {
     .footer-content {
       grid-template-columns: 1fr;
     }
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 20px;
+        text-align: center;
+    }
+
+    .thumbnail img {
+        width: 250px;
+        height: 250px;
+        object-fit: cover;
+        border-radius: 8px;
+    }
+
+    html{
+        overflow-x: hidden;
+    }
+    
   }
   
