--- a/assets/css/acceuil.css
+++ b/assets/css/acceuil.css
@@ -157,11 +157,16 @@ nav li:hover .dropdown {
 /* Reste des styles précédents... */
 .header-icons {
     display: flex;
+    align-items: center ;
+    justify-content: center;
     gap: 20px;
 }
 
 .header-icons i {
     cursor: pointer;
+    display: flex;
+    align-items: center ;
+    justify-content: center;
     font-size: 18px;
 }
 
@@ -1082,18 +1087,21 @@ img, video {
 }
 
 button.go-to-cart {
-    background-color: yellow; /* Couleur de fond */
+    width: 100%; /* Prend toute la largeur disponible */
+    padding: 10px; /* Espacement interne pour le bouton */
+    background-color: #007bff; /* Couleur de fond par défaut */
     color: white; /* Couleur du texte */
     border: none; /* Pas de bordure */
     border-radius: 5px; /* Bords arrondis */
-    padding: 10px 15px; /* Espacement interne */
     cursor: pointer; /* Curseur en forme de main */
-    transition: background-color 0.3s ease-in-out; /* Transition pour l'effet hover */
-    margin-top: 10px; /* Ajoute un espacement au-dessus du bouton */
+    transition: background-color 0.3s; /* Transition pour la couleur de fond */
 }
 
-button.go-to-cart:hover {
-    background-color: #e6e600; /* Couleur de fond un peu jaune foncé au survol */
+button.go-to-cart:disabled {
+    background-color: gray; /* Couleur de fond grise */
+    color: white; /* Couleur du texte blanche */
+    cursor: not-allowed; /* Curseur pour indiquer que le bouton est désactivé */
+    opacity: 0.6; /* Opacité pour indiquer que le bouton est désactivé */
 }
 
 .cart-dropdown {
