--- a/assets/css/men.css
+++ b/assets/css/men.css
@@ -880,7 +880,7 @@ footer {
     position: absolute;
     top: -5px; /* Ajustez la position selon vos besoins */
     right: -10px; /* Ajustez la position selon vos besoins */
-    background-color: #ccad24; /* Couleur du badge */
+    background-color: #FFCD35; /* Couleur du badge */
     color: white; /* Couleur du texte */
     border-radius: 50%;
     padding: 2px 6px; /* Espacement autour du texte */
@@ -967,7 +967,7 @@ button.go-to-cart {
 }
 
 button.go-to-cart:hover {
-    background-color: #FFCD35; /* Couleur de fond un peu jaune foncé au survol */
+    background-color: #c59e29; /* Couleur de fond un peu jaune foncé au survol */
 }
 
 .cart-item {
