--- a/assets/css/men.css
+++ b/assets/css/men.css
@@ -191,8 +191,7 @@ nav li:hover .dropdown {
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.5);
- 
+ background-color: white;
 }
 
 .slide {
@@ -224,7 +223,7 @@ nav li:hover .dropdown {
 */
 /* Styles des slides */
 .slide:nth-child(1) {
-  background-color: #f8f8f8;
+  background-color: #ffffff;
 }
 
 .slide:nth-child(2) {
@@ -247,6 +246,7 @@ nav li:hover .dropdown {
   transform: translateY(20px);
   color: #ccad24;
   transition: all 0.5s ease-out 0.3s;
+  
 }
 
 .hero-content p {
@@ -1251,8 +1251,7 @@ button.go-to-cart:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.6); /* Assombrissement augmenté */
-    z-index: 1;
-}
+    background: rgba(255, 255, 255, 0.959); /* Assombrissement augmenté */
+    z-index:-1
 
 
