--- a/assets/css/Terms&Conditions.css
+++ b/assets/css/Terms&Conditions.css
@@ -377,6 +377,7 @@ h2 {
         }
         
         .faq-header {
+            padding-top: 3rem;
             text-align: center;
             margin-bottom: 40px;
         }
